change npm command

--- a/.github/workflows/mdminhaj-deploy.yml
+++ b/.github/workflows/mdminhaj-deploy.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install yarn
       run: npm install -g yarn
     - name: Installing project dependencies...
-    - run: yarn ci
+    - run: yarn install
     - name: Building project...
     - run: yarn build
     - name: exporting to create SSG...
