fixed yarn issue

--- a/.github/workflows/mdminhaj-deploy.yml
+++ b/.github/workflows/mdminhaj-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Installing project dependencies...
-      run: yarn ci
+      run: yarn install
     - name: Building project...
       run: yarn build
     - name: exporting to create SSG...
