--- a/.github/workflows/mdminhaj-deploy.yml
+++ b/.github/workflows/mdminhaj-deploy.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Building project...
         run: yarn build
         env:
-          NEXT_PUBLIC_API_KEY: ${{ secrets.API_KEY }}
-          NEXT_PUBLIC_CONTACT_API_URI: ${{ secrets.CONTACT_API_URI }}
+          NEXT_PUBLIC_API_KEY: developer@mdminhaj24ctg24&&mdminhaj-portfolio-web-api
+          NEXT_PUBLIC_CONTACT_API_URI: https://dev-mdminhaj.herokuapp.com/api/contact
       - name: exporting to create SSG...
         run: yarn export
       - name: No nojekyll
