--- a/.github/workflows/mdminhaj-deploy.yml
+++ b/.github/workflows/mdminhaj-deploy.yml
@@ -28,8 +28,8 @@ jobs:
         run: yarn install
       - name: Building project...
         env:
-          NEXT_PUBLIC_API_KEY: ${{ secrets.API_KEY }}
-          NEXT_PUBLIC_CONTACT_API_URI: ${{ secrets.CONTACT_API_URI }}
+          PUBLIC_API_KEY: ${{ secrets.API_KEY }}
+          PUBLIC_CONTACT_API_URI: ${{ secrets.CONTACT_API_URI }}
         run: yarn build
       - name: exporting to create SSG...
         run: yarn export
